; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/dev/dtrace/extr_fasttrap.c_fasttrap_highbit.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/dev/dtrace/extr_fasttrap.c_fasttrap_highbit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @fasttrap_highbit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fasttrap_highbit(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 1, i32* %4, align 4
  %5 = load i32, i32* %3, align 4
  %6 = icmp eq i32 %5, 0
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %63

8:                                                ; preds = %1
  %9 = load i32, i32* %3, align 4
  %10 = sext i32 %9 to i64
  %11 = and i64 %10, -4294967296
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %18

13:                                               ; preds = %8
  %14 = load i32, i32* %4, align 4
  %15 = add nsw i32 %14, 32
  store i32 %15, i32* %4, align 4
  %16 = load i32, i32* %3, align 4
  %17 = ashr i32 %16, 32
  store i32 %17, i32* %3, align 4
  br label %18

18:                                               ; preds = %13, %8
  %19 = load i32, i32* %3, align 4
  %20 = and i32 %19, -65536
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %27

22:                                               ; preds = %18
  %23 = load i32, i32* %4, align 4
  %24 = add nsw i32 %23, 16
  store i32 %24, i32* %4, align 4
  %25 = load i32, i32* %3, align 4
  %26 = ashr i32 %25, 16
  store i32 %26, i32* %3, align 4
  br label %27

27:                                               ; preds = %22, %18
  %28 = load i32, i32* %3, align 4
  %29 = and i32 %28, 65280
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %31, label %36

31:                                               ; preds = %27
  %32 = load i32, i32* %4, align 4
  %33 = add nsw i32 %32, 8
  store i32 %33, i32* %4, align 4
  %34 = load i32, i32* %3, align 4
  %35 = ashr i32 %34, 8
  store i32 %35, i32* %3, align 4
  br label %36

36:                                               ; preds = %31, %27
  %37 = load i32, i32* %3, align 4
  %38 = and i32 %37, 240
  %39 = icmp ne i32 %38, 0
  br i1 %39, label %40, label %45

40:                                               ; preds = %36
  %41 = load i32, i32* %4, align 4
  %42 = add nsw i32 %41, 4
  store i32 %42, i32* %4, align 4
  %43 = load i32, i32* %3, align 4
  %44 = ashr i32 %43, 4
  store i32 %44, i32* %3, align 4
  br label %45

45:                                               ; preds = %40, %36
  %46 = load i32, i32* %3, align 4
  %47 = and i32 %46, 12
  %48 = icmp ne i32 %47, 0
  br i1 %48, label %49, label %54

49:                                               ; preds = %45
  %50 = load i32, i32* %4, align 4
  %51 = add nsw i32 %50, 2
  store i32 %51, i32* %4, align 4
  %52 = load i32, i32* %3, align 4
  %53 = ashr i32 %52, 2
  store i32 %53, i32* %3, align 4
  br label %54

54:                                               ; preds = %49, %45
  %55 = load i32, i32* %3, align 4
  %56 = and i32 %55, 2
  %57 = icmp ne i32 %56, 0
  br i1 %57, label %58, label %61

58:                                               ; preds = %54
  %59 = load i32, i32* %4, align 4
  %60 = add nsw i32 %59, 1
  store i32 %60, i32* %4, align 4
  br label %61

61:                                               ; preds = %58, %54
  %62 = load i32, i32* %4, align 4
  store i32 %62, i32* %2, align 4
  br label %63

63:                                               ; preds = %61, %7
  %64 = load i32, i32* %2, align 4
  ret i32 %64
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
